# openlf

./: .gitignore  Bugs  CMakeLists.txt  CMakeLists.txt.noTests  Doxyfile  README.md  TODO.md  Todo  basler_ace2500_8bit_runtime5_4.mcf  basler_ace2500_8bit_runtime5_4_linux.mcf  build_all.sh  configure  configure.sh  memoryCheck.sh
cmake/: miniglog_patch_msvc12.cmake
components/: CMakeLists.txt  comp_2DTV.cpp  comp_RGBreconstruction.cpp  comp_camarray.cpp  comp_dispwrite.cpp  comp_epi.cpp  comp_epi3d.cpp  comp_genmesh.cpp  comp_intensitiy_write.cpp  comp_lfread.cpp  comp_lfwrite.cpp  comp_mergeDispMaps.cpp  comp_readCLIF.cpp  comp_select_path.cpp  comp_subset.cpp  comp_warpToRefView.cpp  comp_warpbyrefdisparity.cpp  comp_writeCLIF.cpp  comp_writeMesh.cpp  op_averagechannels.cpp  op_blur.cpp  op_discdilation.cpp  op_discerosion.cpp  op_discmedian.cpp  op_dx.cpp  op_dy.cpp  op_gauss.cpp  op_gaussiansharpening.cpp  op_imwrite.cpp  op_loadimage.cpp  op_mergedispbycoherence.cpp  op_normalize.cpp  op_saveimage.cpp  op_scharr.cpp  op_scharr_x.cpp  op_scharr_y.cpp  op_tensor2disparity.cpp  op_tensor2orientation.cpp  op_tensor2x2.cpp  op_test.cpp  (+6 more)
components/comp_camarray/: cameraarray.cpp  cameraarray.h  cvShowManyImages.cpp  main.cpp
dependencies/: HDF5_include.tar
doc/: advanced.md  architecture.md  concepts.md  editor.md  image_processing.md  tools.md  tutorial.cpp  tutorial.md
examples/: array.gml  circular.gml  config.ini  full.gml  full_small.gml  heterogeneousProcessing.gml  st.gml  writebot_win.gml  writeboth.gml  writeboth_i3.gml  writeclif.gml
fuckthis/: CMakeLists.txt  test.cpp
gui/: CMakeLists.txt  LF_GUI_windows.pro
gui/doc/: LFViewer_MANUAL.tex
gui/doc/figures/LF_Viewer/: figure_INI_example.tex  figure_INI_example2.tex  figure_LFViewer_frontend.tex  figure_LFViewer_frontend_withINI.tex  figure_LFViewer_frontend_withXML.tex  figure_Window.tex  figure_calib_result.tex  figure_openCV_XML.tex
gui/doc/sections/: LF_Viewer.tex
gui/include/: animation.h  gui_toolbox.h
gui/resources/: Mac_Icons.icns  help.qrc  recources.qrc
gui/src/: gui_signals.cpp  gui_slots.cpp  gui_toolbox.cpp  main.cpp  toolbox_ui.ui
gui/ui_forms/: gui_linux.ui  gui_windows.ui
html/: README_8md.html  annotated.html  classOpenLF-members.html  classOpenLF.html  classes.html  classopenlf_1_1LF-members.html  classopenlf_1_1LF.html  classopenlf_1_1components_1_1COMP__DispWrite-members.html  classopenlf_1_1components_1_1COMP__DispWrite.html  classopenlf_1_1components_1_1COMP__DispWrite__coll__graph.map  classopenlf_1_1components_1_1COMP__DispWrite__inherit__graph.md5  classopenlf_1_1components_1_1COMP__Epi.html  (+156 more)
old/boostExample/ia13project/example_python_extension/my_module/: CMakeLists.txt  my_module.cpp
old/boostExample/ia13project/example_python_extension/my_module/src/: pyHelloWorld.cxx
openlf_circuits/: CMakeLists.txt
openlf_circuits/circuits/: circuit_demo.h
openlf_circuits/components/: comp_bool_signal.h  comp_logical_and.cpp  comp_logical_and.h  comp_number_viewer.h
openlf_circuits/gui/src/: QtpMain.cpp
openlf_circuits/src/: main.cpp
src/lib/components/: CMakeLists.txt  cmake_install.cmake  comp_dispwrite.cpp  comp_epi.cpp  comp_gauss.cpp  comp_lfread.cpp  comp_lfwrite.cpp  comp_tutorial.cpp  epi.cpp  gauss.cpp
src/lib/operators/: CMakeLists.txt  op_averagechannels.cpp  op_discdilation.cpp  op_discerosion.cpp  op_discmedian.cpp  op_gauss.cpp  op_gauss2.cpp  op_gaussiansharpening.cpp  op_loadimage.cpp  op_mergedispbycoherence.cpp  op_normalize.cpp  op_saveimage.cpp  op_scharr.cpp  op_scharr_x.cpp  op_scharr_y.cpp  op_tensor2orientation.cpp  op_tensor2x2.cpp  op_test.cpp  op_vigraconvolveonedimension.cpp  op_vigragauss.cpp  op_vigragradientmagnitude.cpp
tests/: CMakeLists.txt  TestCheck  epi_original.txt  image_test.cpp  image_test.hpp  newfile.cpp  test_Channel_view.cpp  test_Channel_view.hpp  test_Channel_view_run.cpp  test_Gaussian.hpp  test_channel.cpp  test_channel.hpp  test_hdf5memory.hpp  test_hdf5memory_run.cpp  test_image.cpp  test_image.hpp  test_imgproc.cpp  test_imgproc.hpp  test_lightfield.cpp  test_lightfield.hpp  test_lightfield_IO.cpp  test_lightfield_IO.hpp  test_lightfield_base.hpp  test_lightfield_run.cpp  test_lukas.cpp  test_lukas.hpp  test_operator.cpp  test_operator.hpp  test_operator_run.cpp  test_performance_vigra_ST.cpp  test_performance_vigra_ST.hpp  test_performance_vigra_ST_run.cpp  testrunner.cpp  viewer.py
tests/data/: test_sampling
tests/data/OpenLF_testLF/: convert_bw.py
tests/data/OpenLF_testLF/3DH/h5_v1_h64_w48/: 3DH_high_bw.cfg  3DH_high_rgb.cfg  bw.cfg  rgb.cfg  rgb_roi.cfg
tests/data/OpenLF_testLF/3DH/h7_v1_h48_w64/: 3DH_wide_bw.cfg  3DH_wide_rgb.cfg  4D_rgb.cfg  bw.cfg  rgb.cfg
tests/data/OpenLF_testLF/3DV/h1_v5_h48_w64/: 3DV_rgb.cfg  3DV_wide_bw.cfg  3DV_wide_rgb.cfg  bw.cfg  bw_roi.cfg  rgb.cfg
tests/data/OpenLF_testLF/3DV/h1_v7_h64_w48/: 3DV_bw.cfg  3DV_high_bw.cfg  3DV_high_rgb.cfg  bw.cfg  rgb.cfg
tests/data/OpenLF_testLF/4D/h4_v3_h60_w80/: rgb.cfg
tests/data/OpenLF_testLF/4D/h5_v7_h64_w48/: 4D_high_bw.cfg  4D_high_rgb.cfg  4D_high_rgb.lf  4D_rgb.cfg  bw.cfg  rgb.cfg
tests/data/OpenLF_testLF/4D/h7_v5_h48_w64/: 4D_bw.cfg  4D_wide_bw.cfg  4D_wide_rgb.cfg  bw.cfg  bw_roi.cfg  rgb.cfg  vertical_epiIterTest.txt
tests/data/OpenLF_testLF/CROSS/h5_v7_h64_w48/: 4D_bw.cfg  CROSS_high_bw.cfg  CROSS_high_rgb.cfg  bw.cfg  rgb.cfg  rgb_roi.cfg
tests/data/OpenLF_testLF/CROSS/h7_v5_h48_w64/: 4D_bw.cfg  4D_rgb.cfg  CROSS_wide_bw.cfg  CROSS_wide_rgb.cfg  bw.cfg  horizontal_epiIterTest.txt  rgb.cfg
tests/data/OpenLF_testLF/diversity/: CROSS_div.cfg
tests/data/output/: README
tests/data/test_lf/4D/: test_lf4D_bw.h5  test_lf4D_rgb.h5
tests/old/: test_image.cpp  test_image.hpp  test_lightfield_base.cpp  test_lightfield_base_run.cpp
workflows/: CMakeLists.txt  sandbox.cpp
workflows/demo/: My4DOperator.cpp  My4DOperator.hpp  demo.cpp
workflows/demo_4DOperator/: My4DOperator.cpp  My4DOperator.hpp  demo_4DOp.cpp
workflows/demo_opengm/: demo_opengm.cxx
workflows/experimental_workflow/: experimental_workflow.cpp
(+247 files in other folders)
